Freestyle Not Render Animation Blender 2.8 #60095

Closed
opened 2019-01-03 00:28:58 +01:00 by Andrew May · 14 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GeForce GTX 1060 6GB

Blender Version
Broken: Blender 2.80 Beta 12-28-18
Blender Cycles

Short description of error
The animation of Freestyle sub-unit only rendered one frame and that one frame's freestyle strokes render were applied to the rest of the animation sequence.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).


  1. Open Application
  2. Check Freestyle in Scene Menu
  3. Animated Object
  4. Set Sequence In/Out
  5. In Output Menu, set file location
  6. In Output Menu, set file format to PNG{F6154860}, Compression at 0%, RGB, 16 Bit
  7. Click Render Animation from in the "Render" menu in toolbar.
  8. BOOM! Bug Found

Knights of the 3rd Floor.blend

**System Information** Operating system: Windows 10 Graphics card: Nvidia GeForce GTX 1060 6GB **Blender Version** Broken: Blender 2.80 Beta 12-28-18 Blender Cycles **Short description of error** The animation of Freestyle sub-unit only rendered one frame and that one frame's freestyle strokes render were applied to the rest of the animation sequence. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). ``` ``` 1. Open Application 2. Check Freestyle in Scene Menu 3. Animated Object 4. Set Sequence In/Out 5. In Output Menu, set file location 6. In Output Menu, set file format to PNG{[F6154860](https://archive.blender.org/developer/F6154860/Freestyle_Blender_2.8_Bug.mp4)}, Compression at 0%, RGB, 16 Bit 7. Click Render Animation from in the "Render" menu in toolbar. 8. BOOM! Bug Found [Knights of the 3rd Floor.blend](https://archive.blender.org/developer/F6161665/Knights_of_the_3rd_Floor.blend)
Author

Added subscriber: @mayday1814

Added subscriber: @mayday1814

#60869 was marked as duplicate of this issue

#60869 was marked as duplicate of this issue

#60574 was marked as duplicate of this issue

#60574 was marked as duplicate of this issue

#60508 was marked as duplicate of this issue

#60508 was marked as duplicate of this issue

#60367 was marked as duplicate of this issue

#60367 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot reproduce here.

Cycles is doing fine with freestyle here, Eevee should not work at all with freestyle (see #58669)
(also confused you have Render Animation button in the Render panel? -- In the Properties Editor? This should only be in the menus...)

Anyways, could you share your blendfile so we can have a look?

Marking as incomplete until we have that...

Cannot reproduce here. Cycles is doing fine with freestyle here, Eevee should not work at all with freestyle (see #58669) (also confused you have Render Animation button in the Render panel? -- In the Properties Editor? This should only be in the menus...) Anyways, could you share your blendfile so we can have a look? Marking as incomplete until we have that...
Author

I apologize. I am using Blender Cycles.
As for the Render Panel, which I am used to saying, I meant to say the "Render Animation" under the "Render" menu in the toolbar.

Third, here is my Blender File.Knights of the 3rd Floor.blend
Hopefully this is helpful.

I have edited the changes.

I apologize. I am using Blender Cycles. As for the Render Panel, which I am used to saying, I meant to say the "Render Animation" under the "Render" menu in the toolbar. Third, here is my Blender File.[Knights of the 3rd Floor.blend](https://archive.blender.org/developer/F6161589/Knights_of_the_3rd_Floor.blend) Hopefully this is helpful. I have edited the changes.
Member

Added subscriber: @Picklejones

Added subscriber: @Picklejones

Added subscriber: @RStafford

Added subscriber: @RStafford
Member

Added subscriber: @MaksB

Added subscriber: @MaksB

This issue was referenced by 15bae8ac00

This issue was referenced by 15bae8ac0050a50904ac4f90e85e4463463b3c5d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @mrlee

Added subscriber: @mrlee
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60095
No description provided.