Fix T60095: freestyle not rendering animated camera correctly.

Replace legacy view matrix access with same one used by Eevee.